https-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-appname
  namespace: appnamespace
spec:
  redirectScheme:
    scheme: https
    permanent: true
