middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: appname
  namespace: appnamespace
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
