service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appname
  namespace: appnamespace
spec:
  selector:
    app: appname
  ports:
    - port: 80
      targetPort: 80
