ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: appname
    traefik.ingress.kubernetes.io/router.middlewares: appnamespace-appname@kubernetescrd
  name: appname
  namespace: appnamespace
spec:
  rules:
  - host: "{domain here}"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: appname
            port:
              number: 80
  tls:
  - hosts:
    - {domain here}
    secretName: ingress-secret
